chore: extended delay to 3s, fixed alt text in logo and columns, improved contrast of footer

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -79,6 +79,7 @@ main {
 
 footer {
   height: var(--footer-height);
+  color: var(--light-tan);
 }
 
 h1,
